# json2pb

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  json2pb-c.code-workspace
.github/workflows/: ci.yml
doc/: README_CN.md
example/: CMakeLists.txt
example/include/: common.h  example_pkg.h  utilities.h
example/proto/: example.proto
example/resource/: device.json  example.json
example/src/: example_pkg.c  main.c  utilities.c
example/verify/: HEX_MSG.txt
example/verify/go/: main.go
example/verify/python/: verify.py  verify.sh
include/: cjson2pb-c.h  common.h  global.h  internal.h  json2pb.h  pb-c2cjson.h  protobuf-c-utilities.h
protobuf/: device.proto
python/: unserilize.py
script/: format-cmake.sh
src/: cjson2pb_easy_interface.c  cvt.c  default.c  default_conversion.c  easy_interface.c  json2pb.c  main.c  pb-c2cjson.c  protobuf-c-utilities.c  protobuf_c_ext.c  protobuf_c_field_conversion.c  single_value_conversion.c  utilities.c  utils.c
src/libjson2pb/: cvt.c  internal.h  json2pb.c
test/: CMakeLists.txt  main.c
test/include/: common.h  utils.h
test/protobuf/: device.proto  test.proto
test/src/: test_cvt_int32_t.c  test_cvt_number.c  test_cvt_to_bool.c  test_cvt_to_bytes.c  test_cvt_to_double.c  test_cvt_to_enum.c  test_cvt_to_float.c  test_cvt_to_int32.c  test_cvt_to_int64.c  test_cvt_to_message.c  test_cvt_to_string.c  test_cvt_to_uint32.c  test_cvt_to_uint64.c  test_public_interface.c
