CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

MESSAGE(VERBOSE "PROJECT_SOURCE_DIR:        " ${PROJECT_SOURCE_DIR})
MESSAGE(VERBOSE "CMAKE_CURRENT_BINARY_DIR:  " ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(VERBOSE "CMAKE_BINARY_DIR:          " ${CMAKE_BINARY_DIR})
MESSAGE(VERBOSE "CMAKE_CURRENT_SOURCE_DIR:  " ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(VERBOSE "CMAKE_SOURCE_DIR:          " ${CMAKE_SOURCE_DIR})

INCLUDE(ExternalProject)

EXTERNALPROJECT_ADD(
    cimplog
    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/third-party/cimplog
    GIT_REPOSITORY git@gitee.com:third_party_2/cimplog.git
    GIT_TAG "1.0.1"
    CMAKE_ARGS +=
               -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}
               -DBUILD_TESTING=OFF
               -DLEVEL_DEFAULT=2)
ADD_LIBRARY(libcimplog STATIC IMPORTED)
SET_TARGET_PROPERTIES(libcimplog PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/lib/libcimplog.a")
ADD_DEPENDENCIES(libcimplog cimplog)

SET(PROTOC_C_EXECUTABLE protoc-c)

SET(PROTO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/protobuf)
SET(PROTO_OUTPUT_SRC_DIR ${CMAKE_CURRENT_BINARY_DIR}/src)
SET(PROTO_OUTPUT_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)

FILE(MAKE_DIRECTORY ${PROTO_OUTPUT_SRC_DIR})
FILE(MAKE_DIRECTORY ${PROTO_OUTPUT_INCLUDE_DIR})

FILE(GLOB MSG_PROTO_FILES ${PROTO_SRC_DIR}/*.proto)

EXECUTE_PROCESS(
    COMMAND protoc-c ${MSG_PROTO_FILES} --c_out=${PROTO_OUTPUT_SRC_DIR} -I ${PROTO_SRC_DIR}
    WORKING_DIRECTORY ${PROTO_SRC_DIR}
    RESULT_VARIABLE result
    OUTPUT_VARIABLE output
    ERROR_VARIABLE error)

EXECUTE_PROCESS(
    COMMAND protoc ${MSG_PROTO_FILES} --python_out=${PROJECT_SOURCE_DIR}/python -I ${PROTO_SRC_DIR}
    WORKING_DIRECTORY ${PROTO_SRC_DIR}
    RESULT_VARIABLE result
    OUTPUT_VARIABLE output
    ERROR_VARIABLE error)

FILE(GLOB PROTO_H_FILES ${PROTO_OUTPUT_SRC_DIR}/*.pb-c.h)

EXECUTE_PROCESS(
    COMMAND mv ${PROTO_H_FILES} ${PROTO_OUTPUT_INCLUDE_DIR}
    WORKING_DIRECTORY ${PROTO_OUTPUT_SRC_DIR}
    RESULT_VARIABLE result
    OUTPUT_VARIABLE output
    ERROR_VARIABLE error)

AUX_SOURCE_DIRECTORY(src EXE_SRC_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/src BUILD_SRC_LIST)

ADD_EXECUTABLE(TEST_EXE ${EXE_SRC_LIST} ${BUILD_SRC_LIST})
SET_TARGET_PROPERTIES(
    TEST_EXE
    PROPERTIES POSITION_INDEPENDENT_CODE ON
               OUTPUT_NAME "json2pb"
               VERSION ${PROJECT_VERSION})
TARGET_INCLUDE_DIRECTORIES(TEST_EXE PUBLIC include ${CMAKE_CURRENT_BINARY_DIR}/include)
TARGET_LINK_DIRECTORIES(
    TEST_EXE
    PUBLIC
    ${CMAKE_CURRENT_BINARY_DIR}/lib
    ${LIBRARY_OUTPUT_PATH})
TARGET_LINK_LIBRARIES(TEST_EXE SHARED_LIBRARY libcimplog.a)
IF(DEBUG_BUT_NOT_ASSERT)
    TARGET_COMPILE_DEFINITIONS(SHARED_LIBRARY PUBLIC REMOVE_ASSERT)
ENDIF()
